<resources>
    <string name="app_name">LaureApp</string>
    <string name="registrati">Registrati</string>
    <string name="cognome">Cognome</string>
    <string name="nome">Nome</string>
    <string name="matricola">Matricola</string>
    <string name="dipartimento">  Dipartimento</string>
    <string name="corso">Corso</string>
    <string name="textRegistrati">Non hai un account? Registrati</string>
    <string name="home">Home</string>
    <string name="profilo">Profilo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registrazione_docente">Registrazione Docente</string>
    <string name="accedi">Accedi</string>
    <string name="errorRegistrazione">Registrazione fallita</string>
    <string name="errorEmailPass">Email o password non validi</string>
    <string name="errorMatricola">Matricola non valida</string>
    <string name="errorCampiObbligatori">Tutti i campi sono obbligatori</string>
    <string name="errorDip">Inserire il dipartimento</string>
    <string name="successRegistrazione">Registrazione avvenuta con successo</string>
    <string name="selezionaDip">Seleziona dipartimento</string>
    <string name="selezionaCorso">Seleziona corso</string>
    <string name="authDocente">Autenticazione come docente.</string>
    <string name="authStudente">Autenticazione come studente.</string>
    <string name="nuovaTesi">Inserisci Nuova Tesi</string>
    <string name="tesi">Tesi</string>
    <string name="taskTesi">Compiti Tesi</string>
    <string name="esci">Esci</string>
    <string name="compitiSvolti">Compiti Svolti</string>
    <string name="compitiAssegnati">Compiti Assegnati</string>
    <string name="durata">Durata</string>
    <string name="dataInizio">Iniziata</string>
    <string name="descrizione">Descrizione</string>
    <string name="impostaCompletato">Imposta come completato</string>
    <string name="impostaIniziato">Imposta come iniziato</string>
    <string name="scadenza">Scadenza</string>
    <string name="stato">Stato</string>
    <string name="aggiungiTask">Aggiungi Compito</string>
    <string name="caricaFile">Carica file</string>
    <string name="miaTesi">Mia Tesi</string>
    <string name="ricercaTesi">Ricerca Tesi</string>
    <string name="cerca">Cerca qui</string>
    <string name="Docente">Docente</string>
    <string name="media">Media Richiesta </string>
    <string name="visualizzaTesi">Visualizza Tesi</string>
    <string name="classificaTesi">Classifica Tesi</string>
    <string name="registraStudente">Registrazione Studente</string>
    <string name="ordina">Ordina</string>
    <string name="order_by_pos">Mio ordinamento</string>
    <string name="order_by_media">Ordina per media voti</string>
    <string name="order_by_durata">Ordina per durata</string>
    <string name="ricevimenti">Ricevimenti</string>
    <string name="data">Data</string>
    <string name="taskRicevimento">Task di riferimento</string>
    <string name="dettagli">Dettagli</string>
    <string name="classifica_tesi">Classifica Tesi</string>
    <string name="richieste_tesi">Richieste Tesi</string>
    <string name="nomeTask">Nome Task</string>
    <string name="nullTesi">Nessuna tesi assegnata</string>
    <string name="richiesta_tesi">Richiesta Tesi</string>
    <string name="mie_tesi">Mie Tesi</string>
    <string name="tesi_avviate">Tesi Avviate</string>
    <string name="modifica">Modifica</string>
    <string name="registrazione_avvenuta_con_successo">Registrazione avvenuta con successo</string>
    <string name="errore_durante_la_registrazione">Errore durante la registrazione</string>
    <string name="richiesta_ric">Richieste ricevimento</string>
    <string name="visualizzaTask">Task tesi</string>
    <string name="ospite">Visualizza tesi</string>
    <string name="themaChiaro">Tema chiaro</string>
    <string name="themaScuro">Tema scuro</string>
    <string name="msgConferma">Sei sicuro di voler procedere?</string>
    <string name="titoloConferma">Conferma</string>
    <string name="mediaErr">Valore media non valido</string>
    <string name="invia_richiesta">Invia richiesta</string>
    <string name="inserire_descrizione_richiesta">Inserire descrizione richiesta</string>
    <string name="richiedi_ricevimento">Richiedi ricevimento</string>
    <string name="nessuna_tesi_collegata">Nessuna tesi collegata</string>
    <string name="reimposta_password">Reimposta password</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="inserisci_email_valida">Inserisci email valida</string>
    <string name="email_inviata">Email inviata.</string>
    <string name="errore_nel_reimpostare_la_password">Errore nel reimpostare la password.</string>
    <string name="tutti_i_campi_sono_obbligatori">Tutti i campi sono obbligatori</string>
    <string name="modificaPass">Modifica Password</string>
    <string name="Conf_mod">Conferma Modifiche</string>
    <string name="dati_caricati_con_successo">Dati caricati con successo</string>
    <string name="si_verificato_un_errore">Si è verificato un errore</string>
    <string name="compila_tutti_i_campi">Compila tutti i campi!</string>
    <string name="impossibile_accettare_richiesta">Impossibile accettare richiesta</string>
    <string name="impossibile_eliminare_richiesta">Impossibile eliminare richiesta</string>
    <string name="Autenticazione_fallita">Autenticazione fallita.</string>
    <string name="Seleziona_corso">Seleziona corso</string>
    <string name="conferma">Conferma</string>
    <string name="sicuro_procedere">Sei sicuro di voler procedere?</string>
    <string name="annulla">Annulla</string>
    <string name="richieste_di_ricevimento">Richieste di ricevimento</string>
    <string name="ricevimenti_programmati">Ricevimenti Programmati</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="modifica_tesi">Modifica Tesi</string>
    <string name="nome_tesi">Nome Tesi</string>
    <string name="durata_ore">Durata(ore)</string>
    <string name="media_voti_richiesta">Media voti richiesta</string>
    <string name="registrazione_studente">Registrazione Studente</string>
    <string name="nuovo_ricevimento">Nuovo ricevimento</string>
    <string name="argomento">Argomento</string>
    <string name="inserire_dettagli">Inserire dettagli</string>
    <string name="dataduepunti">Data:</string>
    <string name="seleziona_data">Seleziona data</string>
    <string name="send_richiesta">Invia richiesta</string>
    <string name="studente">Studente</string>
    <string name="indicare_un_corelatore">Indicare un corelatore</string>
    <string name="corelatore">Corelatore</string>
    <string name="accetta">Accetta</string>
    <string name="rifiuta">Rifiuta</string>
    <string name="task">Task</string>
    <string name="media_richiesta">Media richiesta</string>
    <string name="condividi">Condividi</string>
    <string name="inserisci_nuovo_tasktesi">Inserisci nuovo taskTesi</string>
    <string name="caricamento">Caricamento...</string>
    <string name="nuovo_tasktesi">Nuovo taskTesi</string>
    <string name="inserire_descrizione">Inserire descrizione</string>
    <string name="scadenza_duepunti">Scadenza:</string>
    <string name="logout">Logout</string>
    <string name="registrazione_tesi">Registrazione Tesi</string>
    <string name="aggiungi_alla_classifica">Aggiungi alla classifica</string>
    <string name="richiedi_tesi">Richiedi tesi</string>
    <string name="contatta_docente">Contatta docente</string>
    <string name="matricola_duepunti">Matricola:</string>

</resources>