<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".utenti.docenti.ModificaTesiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modifica_tesi"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_tesi"
            android:inputType="text"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/durata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/durata_ore"
            android:inputType="number"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/media_voti_richiesta"
            android:inputType="number"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/descrizione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descrizione"
            android:inputType="text"
            android:padding="16dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>