<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utenti.docenti.VisualizzaRichiestaRicevimentoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task" />

        <TextView
            android:id="@+id/taskTesi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dettagli" />

        <TextView
            android:id="@+id/dettagli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dettagli" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/accetta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/accetta"
                />

            <Button
                android:id="@+id/rifiuta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/rifiuta"
                />

        </LinearLayout>






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>