<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".utenti.studenti.RichiestaRicevimentoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuovo_ricevimento"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/argomento">

            <AutoCompleteTextView
                android:id="@+id/spinner_argomento"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/dettagliRicevimento"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:layout_marginTop="8dp"
            android:hint="@string/inserire_dettagli"
            android:inputType="text|textMultiLine" />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataduepunti"
            android:textAlignment="center"
            android:textSize="26sp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/seleziona_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_picker_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:onClick="showDatePickerDialog" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/files_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/aggiungiRichiesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_richiesta"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>